# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2017-05-05 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update msgpack

2017-05-04 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Removed the internal cloudi_core_i_logger:current_function/0 function
      since the FUNCTION_NAME macro now exists

2017-05-02 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fixes for Erlang/OTP 20.0 support
        * epgsql_wg support was removed from cloudi_service_db_pgsql due to
          being unmaintained and using gen_fsm
          (cloudi_service_db_pgsql now uses semiocast as the default)
        * The cloudi executable now uses a pid file to block during stop and
          provides the OS process name as "CloudI"
        * External service source code switched from gen_fsm to gen_statem
        * Update quickrand
    * Fix OCaml CloudI API usage with Erlang/OTP 20.0
      (Erlang binary term format parsing in OCaml had an atom parsing bug
       for pids and other types that store an atom)
    * Updated the cloudi executable used in the Erlang examples

2017-04-20 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix chroot and directory service configuration options
      validation of absolute paths
    * Add libtool/autoconf version check
    * Fix usage of the owner service configuration option
      when it is used with the chroot service configuration option

2017-04-18 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix Python CloudI API compatibility with Python v3
      (incompatibility was added in CloudI 1.7.0)
    * Add request_rate integration test throughput data for 1.7.1

2017-04-17 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update cpg

2017-04-12 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix validation of chroot and directory service configuration options
      to work properly together and require absolute paths
    * Update cpg
