@@ -12,7 +12,7 @@
 %%%
 %%% BSD LICENSE
 %%% 
-%%% Copyright (c) 2013-2016, Michael Truog <mjtruog at gmail dot com>
+%%% Copyright (c) 2013-2017, Michael Truog <mjtruog at gmail dot com>
 %%% All rights reserved.
 %%% 
 %%% Redistribution and use in source and binary forms, with or without
@@ -47,8 +47,8 @@
 %%% DAMAGE.
 %%%
 %%% @author Michael Truog <mjtruog [at] gmail (dot) com>
-%%% @copyright 2013-2016 Michael Truog
-%%% @version 1.5.2 {@date} {@time}
+%%% @copyright 2013-2017 Michael Truog
+%%% @version 1.7.1 {@date} {@time}
 %%%------------------------------------------------------------------------
 
 -module(cloudi_core_i_services_internal_init).
@@ -126,21 +126,14 @@ handle_call(stop, {Pid, _}, #state{service_state = InternalState,
 
 handle_call(Request, _, State)
     when is_tuple(Request),
-         element(1, Request) =:= 'send_sync' ->
-    % synchronous requests should not be allowed because the service request
-    % source pid should also be the receiver pid and doing a 
-    % synchronous request during service initialization would attempt to use
-    % a fake source pid which would cause problems for forwarded service
-    % requests (i.e., since source != receiver, when source is excluded from
-    % the pid lookup for the forward)
-    {reply, {error, invalid_state}, State};
-
-handle_call(Request, _, State)
-    when is_tuple(Request),
-         (element(1, Request) =:= 'recv_async' orelse
+         (element(1, Request) =:= 'send_sync' orelse
+          element(1, Request) =:= 'recv_async' orelse
           element(1, Request) =:= 'recv_asyncs') ->
-    % internal service requests are always received after initialization
-    {reply, {error, invalid_state}, State};
+    % service request responses are always handled after initialization
+    % is successful though it is possible for the
+    % service request response to be received before initialization
+    % is complete (the response remains queued)
+    {stop, {error, invalid_state}, State};
 
 handle_call(Request, From, #state{service_state = InternalState} = State) ->
     case cloudi_core_i_services_internal:
