@@ -519,9 +519,7 @@ t_service_internal_sync_1(_Config) ->
     true = cloudi_x_uuid:is_v1(TransId1),
     {error,
      {service_internal_start_failed,
-      {error,
-       {{badmatch, {error, invalid_state}},
-        _}}}} = cloudi_service_api:services_add([
+      {error, invalid_state}}} = cloudi_service_api:services_add([
         [{prefix, ?SERVICE_PREFIX1},
          {module, ?MODULE},
          {args, [{mode, init_send_sync}]},
@@ -542,9 +540,7 @@ t_service_internal_sync_1(_Config) ->
     true = (TransId2 > TransId1),
     {error,
      {service_internal_start_failed,
-      {error,
-       {{badmatch, {error, invalid_state}},
-        _}}}} = cloudi_service_api:services_add([
+      {error, invalid_state}}} = cloudi_service_api:services_add([
         [{prefix, ?SERVICE_PREFIX1},
          {module, ?MODULE},
          {args, [{mode, init_send_sync}]},
@@ -604,9 +600,7 @@ t_service_internal_async_1(_Config) ->
     true = cloudi_x_uuid:is_v1(TransId1),
     {error,
      {service_internal_start_failed,
-      {error,
-       {{badmatch, {error, invalid_state}},
-        _}}}} = cloudi_service_api:services_add([
+      {error, invalid_state}}} = cloudi_service_api:services_add([
         [{prefix, ?SERVICE_PREFIX1},
          {module, ?MODULE},
          {args, [{mode, init_send_async_recv}]},
@@ -630,9 +624,7 @@ t_service_internal_async_1(_Config) ->
     true = (TransId2 > TransId1),
     {error,
      {service_internal_start_failed,
-      {error,
-       {{badmatch, {error, invalid_state}},
-        _}}}} = cloudi_service_api:services_add([
+      {error, invalid_state}}} = cloudi_service_api:services_add([
         [{prefix, ?SERVICE_PREFIX1},
          {module, ?MODULE},
          {args, [{mode, init_send_async_recv}]},
